[package]
name = "ajdb"
version = "0.1.0"
edition = "2021"
default-run = "ajdb"

[dependencies]
anyhow = "1.0"
axum = "0.5.16"
axum-extra = { version="0.3.7", features = ["spa"] }
chrono = { version = "0.4" }
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9.0"
flate2 = "1.0"
from_variants = "1.0"
hun_law = { path = "../hun_law" }
log = "0.4.14"
maud = { version = "0.24.0", features = [ "axum" ] }
multimap = "0.8.3"
seahash = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"] }

[dev-dependencies]
colored = "2.0"
datatest-stable = "0.1.2"
pretty_assertions = "1"
similar = { version = "2.2" , features = ["inline"] }

[profile.release]
debug = true
incremental = true

[profile.dev.package.hun_law]
#opt-level = 3

[[test]]
harness = false
name = "run_datatests"
