[package]
name = "ajdb"
version = "0.1.0"
edition = "2021"
default-run = "ajdb"

[dependencies]
anyhow = "1.0"
async-once-cell = "0.4.2"
axum = { version = "0.5.16", default-features = false, features = ["http1", "http2", "query"] }
axum-extra = { version="0.3.7", default-features = false, features = ["spa"] }
chrono = { version = "0.4" }
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9.0"
flate2 = "1.0"
from_variants = "1.0"
hun_law = { path = "../hun_law" }
log = "0.4.14"
lru = "0.8.1"
maud = { version = "0.24.0", features = [ "axum" ] }
multimap = "0.8.3"
pathdiff = "0.2.1"
percent-encoding = "2.2.0"
seahash = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
similar = { version = "2.2" , features = ["inline"] }
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
colored = "2.0"
datatest-stable = "0.1.2"
pretty_assertions = "1"

[profile.release]
strip = true
lto = "thin"

[profile.dev-fast]
inherits = "dev"
opt-level = 3

[[test]]
harness = false
name = "run_datatests"
